...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="96dp"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:text="@string/login_action"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textColor="@android:color/white"
...
